// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "com.datmesh";
option go_package = "github.com/ibm/the-mesh-for-data/pkg/connectors/protobuf";

import "policy_manager_request.proto";

message EnforcementAction {
   
    enum EnforcementActionLevel {
        UNKNOWN = 0; 
        DATASET = 1;
        COLUMN = 2;
        ROW = 3;
        CELL = 4;
    }

    string name = 1;
    string id = 2; 
    EnforcementActionLevel level = 3;    
    map<string, string> args = 4;
}

message OperationDecision {
    AccessOperation operation = 1;
    repeated EnforcementAction enforcement_actions = 2;
    repeated Policy used_policies = 3; 
}

message DatasetDecision {
    DatasetIdentifier dataset = 1;
    repeated OperationDecision decisions = 2;
}

message Policy {
     string id = 1;
     string name = 2;
     string description = 3;
     string type = 4;
     repeated string hierarchy = 5;
}

message ComponentVersion {
     string name = 1;
     string id = 2;
     string version = 3;
} 

message PoliciesDecisions{
      repeated ComponentVersion component_versions = 1;
      repeated DatasetDecision dataset_decisions = 2;   //one per dataset
      repeated OperationDecision general_decisions = 3; 
}
